--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,6 @@ spring:
   thymeleaf:
     prefix: classpath:/templates/
     suffix: .html
-    cache: false
   application:
     name: ebookland
   datasource:
@@ -10,6 +9,7 @@ spring:
     username: ebookland
     password: ebookland
     driver-class-name: com.mysql.cj.jdbc.Driver
+
     hikari:
       connection-timeout: 30000
       maximum-pool-size: 50
@@ -17,8 +17,22 @@ spring:
       minimum-idle: 5
       idle-timeout: 30000
       auto-commit: false
+  jpa:
+    show-sql: true
+    generate-ddl: false
+    properties:
+      hibernate:
+        hbm2ddl:
+          auto: update
+        format_sql: true
+
 
 logging:
-  level:
-    root: info
-    com.sh: debug
+  level: {
+    root: DEBUG,
+           com.sh: debug ,
+           com.zaxxer: INFO,
+           org.springframework.boot : INFO,
+           org.thymeleaf : INFO,
+           org.springframework.beans : INFO
+  }
