회원가입 페이지 및 회원가입 가능 #9

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,7 +29,7 @@ spring:
 
 logging:
   level: {
-    root: DEBUG,
+    root: info,
            com.sh: debug ,
            com.zaxxer: INFO,
            org.springframework.boot : INFO,
