--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,7 +26,9 @@ spring:
         format_sql: true
   web:
     resources:
-      static-locations: /static/
+      static-locations:
+        classpath:/static/
+        ,file:/C:/ebookland/src/
 
 
 logging:
